<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">NeoSTORE</string>
    <string name="mainLoginHeader">NeoSTORE</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_forget">Forget Password?</string>
    <string name="login_account">DONT HAVE AN ACCOUNT?</string>
    <string name="register_header">Register</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirmPassword">Confirm Password</string>
    <string name="register_gender">Gender</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_phoneno">Phone Number</string>
    <string name="register_terms">I agree the </string>
    <string name="register_condition">Terms &amp; Conditions</string>
    <string name="registerbutton_register">REGISTER</string>

    <string name="my_cart">My Cart</string>
    <string name="tables">Tables</string>
    <string name="sofas">Sofas</string>
    <string name="chairs">Chairs</string>
    <string name="cupboards">Cupboards</string>
    <string name="my_account">My Account</string>
    <string name="store_locator">Store Locator</string>
    <string name="my_orders">My Orders</string>
    <string name="logout_nav">Logout</string>

    <string name="action_search_title">Search</string>

    <string name="toolar_product_header">Tables</string>

    <string name="add_address">Add Address</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zipcode">ZIP CODE</string>
    <string name="country">COUNTRY</string>
    <string name="save_address">SAVE ADDRESS</string>

    <string name="product_name">6 seater Table</string>
    <string name="product_category">Category Tables</string>
    <string name="product_description">Future furniture table</string>
    <string name="product_price">Rs Price</string>

    <string name="description">DESCRIPTION</string>
    <string name="text_description">Rs fggggggg</string>

    <string name="buy_now">BUY NOW</string>
    <string name="rate">RATE</string>

    <string name="chooser_title">Share With</string>

    <string name="shipping_address">Shipping Address</string>
    <string name="address_name">Address Name</string>

    <string name="place_order">PLACE ORDER</string>

    <string name="address_list">Address List</string>
    <string name="item_name">Item Name</string>

    <string name="submit">SUBMIT</string>
    <string name="enter_quantity">Enter Qty</string>

    <string name="rate_now">Rate Now</string>
    <string name="order_now">Order Now</string>

    <string name="mycart">My Cart</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="reset_password">Reset Password</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="dob">DOB</string>

    <string name="edit_profile">Edit Profile</string>

</resources>
