<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

   <group android:id="@+id/item1"

       >

    <item
        android:id="@+id/navigation_item_mycart"
        android:icon="@drawable/nav_shopping_cart"
        android:title="@string/my_cart"
        />
   </group>
    <group android:id="@+id/item2">
    <item
        android:id="@+id/navigation_item_tables"
        android:icon="@drawable/nav_table"
        android:title="@string/tables"

        />
    </group>
    <group android:id="@+id/item3">
    <item
        android:id="@+id/navigation_item_sofas"
        android:icon="@drawable/nav_sofa"
        android:title="@string/sofas"
        />
    </group>
    <group android:id="@+id/item4">
    <item
        android:id="@+id/navigation_item_chairs"
        android:icon="@drawable/nav_chair"
        android:title="@string/chairs"
        />
    </group>
    <group android:id="@+id/item5">
    <item
        android:id="@+id/navigation_item_cupboards"
        android:icon="@drawable/nav_cupboard"
        android:title="@string/cupboards"
        />
    </group>
    <group android:id="@+id/item6">
    <item
        android:id="@+id/navigation_item_myaccount"
        android:icon="@drawable/username_person"
        android:title="@string/my_account"
        />
    </group>
    <group android:id="@+id/item7">
    <item
        android:id="@+id/navigation_item_storelocator"
        android:icon="@drawable/nav_storelocator_icon"
        android:title="@string/store_locator"
        />
    </group>
    <group android:id="@+id/item8">
    <item
        android:id="@+id/navigation_item_myorders"
        android:icon="@drawable/nav_myorders_icon"
        android:title="@string/my_orders"
        />
    </group>
    <group android:id="@+id/item9">
    <item
        android:id="@+id/navigation_item_logout"
        android:icon="@drawable/nav_logout_icon"
        android:title="@string/logout_nav"
        />
    </group>








</menu>