<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="neosoft.training.neostore.view.login.activity.LoginActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorRed"
    >
<include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="33dp"
        android:paddingRight="33dp"
        android:paddingBottom="23dp"
        >
    <TextView
        android:id="@+id/circleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/mainLoginHeader"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/fifty"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/edtLogUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/edtLogPassword"
        android:layout_marginTop="48dp"
        android:drawableLeft="@drawable/password_lock"
        android:ems="10"
        android:layout_below="@+id/circleImage"
        android:layout_alignRight="@+id/edtNewPassword"
        android:layout_alignEnd="@+id/edtNewPassword"
        android:maxLines="1"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLogUsername"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        style="@style/edtLogPassword"
        android:hint="@string/new_password"
        android:drawableLeft="@drawable/password_lock"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNewPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        style="@style/edtLogPassword"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/password_lock"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        style="@style/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/reset_password"
        android:layout_below="@+id/edtConfirmPassword"
        android:layout_marginTop="@dimen/thirtyThree"

        />

    </RelativeLayout>



</RelativeLayout>
