<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="neosoft.training.neostore.view.login.activity.RegistrationActivity"
    android:background="@color/colorRed"
    >
    <include
        layout="@layout/toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImage"
                android:layout_width="@dimen/oneFourtyFour"
                android:layout_height="@dimen/oneFourtyFour"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginBottom="@dimen/twenty"
                android:src="@drawable/username_person"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"
                />


            <EditText
                android:id="@+id/edtRegFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                style="@style/edtLogUsername"
                android:drawableLeft="@drawable/person"
                android:inputType="textPersonName"
                android:hint="@string/register_firstname"
                android:layout_below="@+id/circleImage"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/edtRegLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:drawableLeft="@drawable/person"
                style="@style/edtLogUsername"
                android:inputType="textPersonName"
                android:hint="@string/register_lastname"
                android:layout_below="@+id/edtRegFirstName"
                android:layout_alignStart="@+id/edtRegFirstName" />

            <EditText
                android:id="@+id/edtRegEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                style="@style/edtLogUsername"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email"
                android:layout_below="@+id/edtRegLastName"
                android:layout_alignStart="@+id/edtRegFirstName"
                android:drawableLeft="@drawable/reg_email"/>

            <EditText
                android:id="@+id/edtPhoneno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="13dp"
                style="@style/edtLogUsername"
                android:inputType="textPassword"
                android:hint="@string/register_phoneno"
                android:layout_below="@+id/edtRegEmail"
                android:layout_alignStart="@+id/edtRegEmail"
                android:drawableLeft="@drawable/reg_phone"
                />

            <EditText
                android:id="@+id/edtDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                style="@style/edtLogUsername"
                android:inputType="textPassword"
                android:hint="@string/dob"
                android:layout_below="@+id/edtPhoneno"
                android:layout_alignStart="@+id/edtRegFirstName"
                android:drawableLeft="@drawable/cake_black_24dp"
                />



            <Button

                android:id="@+id/btnRegRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtDOB"
                style="@style/btnLogin"
                android:layout_marginTop="23dp"
                android:text="@string/submit"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
